Refactoring project